Bug 984155 - Build Thunderbird with frozen linkage / external API - Windows fixes r=Standard8