mail/components/migration/src/nsEudoraProfileMigrator.h
@@ -9,7 +9,6 @@
 #include "nsIMailProfileMigrator.h"
 #include "nsIFile.h"
 #include "nsIObserverService.h"
-#include "nsString.h"
 #include "nsITimer.h"
 #include "nsIImportGeneric.h"
 #include "nsIImportModule.h"
