mail/components/migration/src/nsOutlookProfileMigrator.cpp
@@ -9,6 +9,7 @@
 #include "nsIProfileMigrator.h"
 #include "nsIImportSettings.h"
 #include "nsIFile.h"
+#include "nsComponentManagerUtils.h"
 
 NS_IMPL_ISUPPORTS2(nsOutlookProfileMigrator, nsIMailProfileMigrator, nsITimerCallback)
 
