mail/components/shell/nsMailWinIntegration.cpp
@@ -15,6 +15,18 @@
 #include "nsUnicharUtils.h"
 #include "nsIWinTaskbar.h"
 #include "nsISupportsPrimitives.h"
+#include "nsComponentManagerUtils.h"
+#include "nsServiceManagerUtils.h"
+#include "nsIProperties.h"
+#include "nsStringGlue.h"
+
+#ifndef MOZILLA_INTERNAL_API
+/**
+ * The external API expects CaseInsensitiveCompare. Redefine
+ * nsCaseInsensitiveStringComparator() so that Equals works.
+ */
+#define nsCaseInsensitiveStringComparator() CaseInsensitiveCompare
+#endif
 
 #ifdef _WIN32_WINNT
 #undef _WIN32_WINNT
@@ -232,8 +244,6 @@ nsWindowsShellService::ShortcutMaintenance()
 
 nsresult nsWindowsShellService::Init()
 {
-  nsresult rv;
-
   char16_t appPath[MAX_BUF];
   if (!::GetModuleFileNameW(0, appPath, MAX_BUF))
     return NS_ERROR_FAILURE;
